add pets option
