# controllers/users/getUsetInformation.js
@@ -1,4 +1,5 @@
 const { HttpError } = require('../../helpers');
+const { Pet } = require('../../models/pet');
 
 const getUserInformation = async (req, res) => {
   const { user } = req;
@@ -7,17 +8,22 @@ const getUserInformation = async (req, res) => {
     throw HttpError(401, 'Not authorized');
   }
 
+  const pets = await Pet.find({ _owner: user._id });
+
   const { name, email, birthday, phone, city, avatarURL } = user;
 
   res.status(200).json({
     code: 200,
     data: {
-      avatarURL,
-      name,
-      email,
-      birthday,
-      phone,
-      city,
+      userInfo: {
+        avatarURL,
+        name,
+        email,
+        birthday,
+        phone,
+        city,
+      },
+      pets,
     },
   });
 };
